# sf-mortality

./: 1stCongress.py  LICENSE.md  dlyaml.py  pyproject.toml
SF_data/: SF_CoV-19.csv  analysis.py  raw_dat.csv  rawdat_SF☠️.csv
Senators/: legislators.csv
src/: YAML2csv.py
